One fig is revised.

--- a/KFkushimaEoS.ipynb
+++ b/KFkushimaEoS.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "8bb0925f-03a6-48de-93af-a353537bf13a",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "\"/Users/mnmgchjsk/JupyterLab/TOV_solver_Julia/KF_EoS.png\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
     "eps_bounds = PiecePoly.eps_rho_def.(rho_lim_all, K_all, Gamma_all, a_all)\n",
     "p_bounds = PiecePoly.p_rho_def.(rho_lim_all, K_all, Gamma_all)\n",
     "plot(ε, p;\n",
-    "    label=\"K.Fukushima's Eos\",\n",
+    "    label=\"K.Fukushima's EoS\",\n",
     "    xlabel=L\"\\mathrm{Energy\\ density\\ [g/cm^3]}\",xlabelfontsize=16,\n",
     "    ylabel=L\"\\mathrm{Pressure\\ [g/cm^3]}\", ylabelfontsize=16,\n",
     "    title=\"Piecewise Polytrope Eos\",\n",
