The precision is improved.

--- a/test_modules.ipynb
+++ b/test_modules.ipynb
@@ -37,9 +37,7 @@
     "using .SolverCode\n",
     "\n",
     "# Typical scale\n",
-    "println(\"length scale: \", unit_l, \" cm\")\n",
-    "println(\"energy density scale: \", eps_ref, \" g/cm^3\")\n",
-    "println(\"energy density scale: \", eps_ref*gcm3_to_MeVfm3/1000, \" GeV/fm^3\")"
+    "println(\"length scale: \", unit_l, \" cm\")"
    ]
   },
   {
